# numerical-linalg

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  cmake-multi-platform.yml  cmake-single-platform.yml
src/: base_matrix_view.h  bidiagonalization.h  classification.h  core_types.h  givens.h  hessenberg.h  householder.h  iterator_helper.h  iterators.h  matrix.h  matrix_iterator.h  matrix_types.h  matrix_view.h  qr_algorithm.h  qr_decomposition.h  scalar_types.h  scalar_utils.h  scalars.h  shifts.h  stepper.h  submatrix_range.h  svd.h  types.h  types_details.h
tests/: algorithms_test.cpp  iterators_test.cpp  linalg.h  matrix_test.cpp  scalars_test.cpp  stepper_test.cpp  test_env.cpp  test_env.h
